refactor(protobuf): enhance channel configuration with protobuf class mapping
- Replace `Set<String>` with `Map<String, String>` for incoming channels to map channel names to protobuf classes.
- Use `ConcurrentHashMap` and `AtomicInteger` for thread safety in `ProtobufChannelConfigSource`.
- Add logic to extract concrete protobuf class names for auto-detection.
- Update serializers to handle protobuf class-specific deserialization.